# azure-ai-services-solutions

./: .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  azure_ai_document_intelligence.env.sample  azure_ai_speech.env.sample  azure_ai_vision.env.sample  azure_event_grid.env.sample  azure_openai.env.sample  azure_storage.env.sample  azure_storage_blob.env.sample  azure_storage_queue.env.sample  compose.yaml  document_intelligence.sample  frontend.env.sample  function_app.py  main.py  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docker-release.yaml  infra.yaml
backend/: Dockerfile  agents.env.sample  azure_iot_hub.env.sample  azure_openai.env.sample  bing_search_tool.env.sample  core.py  entrypoint.py  fastapi.py  function_app.py  host.json  main.py
backend/internals/: agent_search.py  azure_ai_document_intelligence.py  azure_ai_speech.py  azure_ai_vision.py  azure_cosmos_db.py  azure_event_grid.py  azure_iot_hub.py  azure_openai.py  azure_openai_langchain.py  azure_storage.py  azure_storage_blob.py  azure_storage_queue.py  document_intelligence.py
backend/routers/: agents.py  azure_ai_document_intelligence.py  azure_ai_speech.py  azure_ai_vision.py  azure_cosmos_db.py  azure_event_grid.py  azure_iot_hub.py  azure_openai.py  azure_storage.py  azure_storage_blob.py  azure_storage_queue.py  document_intelligence.py
backend/schemas/: agents.py  azure_ai_document_intelligence.py  azure_ai_speech.py  azure_ai_vision.py  azure_cosmos_db.py  azure_openai.py  azure_storage_blob.py  azure_storage_queue.py
backend/settings/: agents.py  azure_ai_document_intelligence.py  azure_ai_speech.py  azure_ai_vision.py  azure_cosmos_db.py  azure_event_grid.py  azure_iot_hub.py  azure_openai.py  azure_storage.py  azure_storage_blob.py  azure_storage_queue.py  document_intelligence.py
backend/tests/: test_smoke.py  test_smoke_azure_ai_document_intelligence.py  test_smoke_azure_ai_speech.py  test_smoke_azure_ai_vision.py  test_smoke_azure_cosmos_db.py  test_smoke_azure_event_grid.py  test_smoke_azure_openai.py  test_smoke_azure_storage_blob.py  test_smoke_azure_storage_queue.py  utilities.py
client/: api_client.py  kiota-lock.json
client/azure_ai_document_intelligence/: azure_ai_document_intelligence_request_builder.py
client/azure_ai_vision/: azure_ai_vision_request_builder.py
client/azure_cosmos_db/: azure_cosmos_db_request_builder.py
client/azure_event_grid/: azure_event_grid_request_builder.py
client/azure_openai/: azure_openai_request_builder.py
client/azure_storage/: azure_storage_request_builder.py
client/azure_storage_blob/: azure_storage_blob_request_builder.py
client/azure_storage_queue/: azure_storage_queue_request_builder.py
client/document_intelligence/: document_intelligence_request_builder.py
client/models/: analyze_document_response.py  blob_upload_response.py  chat_completion_request.py  chat_completion_response.py  chat_completion_stream_request.py  chat_completion_with_vision_response.py  create_container_request.py  create_container_response.py  create_database_request.py  create_database_response.py  create_item_request.py  create_item_request_item.py  create_item_response.py  create_item_response_item.py  create_queue_request.py  create_queue_response.py  delete_message_request.py  delete_message_response.py  (+10 more)
data/: contoso_rules.csv
dockerfiles/: backend.Dockerfile  frontend.Dockerfile
docs/: README.md  architecture.drawio
frontend/: .env.sample  Dockerfile  entrypoint.py  main.py  utilities.py
infra/: Makefile  main.bicep  main.parameters.bicepparam
scripts/: README.md  aoai_batch.env.sample  aoai_batch.py  configure-oidc-github.sh  credential.json  deploy-azure-functions.sh  destroy-azure-functions.sh  manage_vector_store.env.sample  manage_vector_store.py  publish-azure-functions.sh
settings/: agents.env.sample  azure_ai_speech.env.sample  azure_cosmos_db.env.sample  frontend.env.sample
specs/: openapi.json
tests/: test_main.py  test_smoke_azure_ai_document_intelligence.py  test_smoke_azure_ai_speech.py  test_smoke_azure_ai_vision.py  test_smoke_azure_cosmos_db.py  test_smoke_azure_event_grid.py  test_smoke_azure_openai.py  test_smoke_azure_storage_blob.py  test_smoke_azure_storage_queue.py
(+58 files in other folders)
