[tool.poetry]
name = "azure-ai-services-solutions"
version = "0.1.0"
description = "A GitHub template repository for a Python"
authors = ["ks6088ts <ks6088ts@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.3.5"
black = "^24.4.0"
pytest = "^8.1.1"
coverage = "^7.4.4"
pytest-cov = "^5.0.0"


[tool.poetry.group.backend.dependencies]
fastapi = "^0.110.3"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
openai = "^1.25.0"
azure-identity = "^1.16.0"
pydantic-settings = "^2.2.1"


[tool.poetry.group.frontend.dependencies]
streamlit = "^1.33.0"
aiohttp = {extras = ["speedups"], version = "^3.9.5"}


[tool.poetry.group.azure-functions.dependencies]
azure-functions = "^1.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["D203"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
addopts = "-ra --cov"
testpaths = ["tests"]
pythonpath = ['.']

[tool.coverage.report]
show_missing = true
